# CKTensor

./: CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake.in  FindMKL.cmake
example/: CMakeLists.txt  hello_world.cpp
include/: cktensor.h
include/cktensor/: allocator.h  functions.h  gemm.h  ops.h  parallel.h  tensor.h  tensor_iterator.h  tensor_view.h  traits.h  util.h
test/: CMakeLists.txt  catch.cpp  catch.hpp  test_functions.cpp  test_ops.cpp  test_parallel.cpp  test_tensor.cpp  test_tensor_view.cpp  test_util.cpp
